Actualizado dashborad y buscar viajes